# orocos_controllers

internal_space_spline_trajectory_action_limits/: CMakeLists.txt  package.xml
internal_space_spline_trajectory_action_limits/src/: InternalSpaceSplineTrajectoryActionLimits.cpp  InternalSpaceSplineTrajectoryActionLimits.h
internal_space_spline_trajectory_generator_limits/: CMakeLists.txt  package.xml
internal_space_spline_trajectory_generator_limits/src/: InternalSpaceSplineTrajectoryGeneratorLimits.cpp  InternalSpaceSplineTrajectoryGeneratorLimits.h  velocityprofile_spline.cpp  velocityprofile_spline.hpp
internal_space_trapezoid_trajectory_action/: CMakeLists.txt  package.xml
internal_space_trapezoid_trajectory_action/src/: InternalSpaceTrapezoidTrajectoryAction.cpp  InternalSpaceTrapezoidTrajectoryAction.h
internal_space_trapezoid_trajectory_generator/: CMakeLists.txt  package.xml
internal_space_trapezoid_trajectory_generator/src/: InternalSpaceTrapezoidTrajectoryGenerator.cpp  InternalSpaceTrapezoidTrajectoryGenerator.h  velocityprofile_trapezoid.cpp  velocityprofile_trapezoid.hpp
rtt_trapezoidal_trajectory_msgs/: CMakeLists.txt  package.xml
trapezoidal_trajectory_actions/: CMakeLists.txt  package.xml
trapezoidal_trajectory_actions/action/: TrapezoidTrajectoryMVMA.action
trapezoidal_trajectory_msgs/: CMakeLists.txt  package.xml
trapezoidal_trajectory_msgs/action/: TrapezoidTrajectory.action  TrapezoidTrajectoryMVMA.action
trapezoidal_trajectory_msgs/msg/: TrapezoidGeneratorGoal.msg  TrapezoidGeneratorResult.msg
