 <package>
  <name>internal_space_trapezoid_trajectory_action</name>
  <version>2.6.0</version>
  <description>fake_servo</description>
  <maintainer email="ka.borkowska@outlook.com">Karolina Borkowska</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/internal_space_trapezoid_trajectory</url>

  <author email="konradb3@gmail.com">Konrad Banachowicz</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt</build_depend>
  <build_depend>rtt_ros</build_depend>
  <build_depend>rtt_rosclock</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>rtt_actionlib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trapezoidal_trajectory_msgs</build_depend>

  <run_depend>rtt</run_depend>
  <run_depend>rtt_ros</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <rtt_plugin_depend>rtt_ros</rtt_plugin_depend>
  </export>
</package>
