<package>
  <name>trapezoidal_trajectory_actions</name>
  <version>0.0.0</version>
  <description>

    Provides action descriptions for trapezoidal trajectory generator.

  </description>
  <maintainer email="ka.borkowska@outlook.com">Karolina Borkowska</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>control_msgs</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>control_msgs</run_depend>


  <export>
    <architecture_independent/>
  </export>

</package>


